tatt vekk masse code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <h1>hallo jeg heter petter smart</h1>
-    <p>Jeg liker brus</p>
+
+<header>
+  <p>navbar</p>
+</header>
+
+<main>
+
+
+<section>
+
+<p>det var en gang en fisk som het willy</p>
+
+</section>
+
+<section>
+
+  <p>au en ape slo min tvillingen</p>
+
+</section>
+
+
+
+
+
+
+
+
+</main>
   </body>
 </html>
