--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer class="main-footer">
-      <p>Kodeloftet</p>
+      <p>Kodeloftet 2024</p>
     </footer>
   </body>
 </html>
