Har lagt til text og bilder

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,19 @@ ko<!DOCTYPE html>
       <a href="/page2.html" aria-current="page">Other page</a>
     </nav>
     <main>
-      <h1>My other page</h1>
+     <section>
+      <h1>Contact information:</h1>
+      <p>To Contact the Federation you can use
+        either you can point a laserpointer at the moon at exactly 20:30.
+        or you can yell as loud as you can "fire! im on fire. Call an abulanse
+        because its getting hot in here, oh yeah".
+      </p>
+      <p> This will send a clear signal to the Federation that their is infact
+        a party going down in your neighborhood yo. and thus the federation will 
+        join your party. and maybe they will let you 
+        go home with the federation after the party.
+      </p>
+     </section>
     </main>
   </body>
 </html>
