--- a/index.html
+++ b/index.html
@@ -23,32 +23,26 @@
 
     <main class="main-content">
       <section class="border-black">
-        <h1>My Nice Page</h1>
+        <h1></h1>
       </section>
 
       <section>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/United_Federation_of_Planets_Flag.svg/1920px-United_Federation_of_Planets_Flag.svg.png" alt="" width="250" height="250">
         <h1>About Us</h1>
 
         <p>
-          The standard chunk of Lorem Ipsum used since the 1500s is reproduced
-          below for those interested. Sections 1.10.32 and 1.10.33 from "de
-          Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-          exact original form, accompanied by English versions from the 1914
-          translation by H. Rackham. Where can I get some? There are many
-          variations of passages of Lorem Ipsum available, but the majority have
-          suffered alteration in some form, by injected humour, or randomised
-          words which don't look even slightly believable. If you are going to
-          use a passage of Lorem Ipsum, you need to be sure there isn't anything
-          embarrassing hidden in the middle of text. All the Lorem Ipsum
-          generators on the Internet tend to repeat predefined chunks as
-          necessary, making this the first true generator on the Internet. It
-          uses a dictionary of over 200 Latin words, combined with a handful of
-          model sentence structures, to generate Lorem Ipsum which looks
-          reasonable. The generated Lorem Ipsum is therefore always free from
-          repetition, injected humour, or non-characteristic words etc.
+          The United Federation of Planets (abbreviated as UFP and commonly referred to as the Federation) was a supranational interstellar union of multiple planetary constituent political entities 
+          under a single central government, founded on the principles of liberty, equality, peace, justice, and progress, with the purpose of furthering the universal rights of all sentient life. 
+          Federation members exchange knowledge and resources to facilitate peaceful cooperation, scientific development, space exploration, and mutual defense.
         </p>
 
         <hr />
+      </section>
+
+
+      <section>
+        <h1></h1>
+<p></p>
       </section>
     </main>
 
