Har lagt til footer elementer,bilder,text og bilde

--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
 
     <main class="main-content">
       <section class="border-black">
-        <h1></h1>
+        <h1>Explore the Galaxy in Unity and Peace</h1>
       </section>
 
       <section>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/United_Federation_of_Planets_Flag.svg/1920px-United_Federation_of_Planets_Flag.svg.png" alt="" width="250" height="250">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/United_Federation_of_Planets_Flag.svg/1920px-United_Federation_of_Planets_Flag.svg.png" alt="" width="300" height="250">
+        <h1></h1>
+
         <h1>About Us</h1>
 
         <p>
-          The United Federation of Planets (abbreviated as UFP and commonly referred to as the Federation) was a supranational interstellar union of multiple planetary constituent political entities 
-          under a single central government, founded on the principles of liberty, equality, peace, justice, and progress, with the purpose of furthering the universal rights of all sentient life. 
-          Federation members exchange knowledge and resources to facilitate peaceful cooperation, scientific development, space exploration, and mutual defense.
+          The United Federation of Planets (UFP) is a powerful interstellar alliance dedicated to promoting peace, 
+          cooperation, and exploration among its member worlds. Founded on principles of mutual respect and understanding, 
+          the UFP has become a beacon of unity in the vast expanse of the galaxy.
         </p>
 
         <hr />
@@ -41,13 +43,85 @@
 
 
       <section>
-        <h1></h1>
-<p></p>
+        <h1>Our History</h1>
+<p>Founding (2161): The United Federation of Planets was established in 2161, 
+  bringing together diverse species that shared a commitment to peaceful coexistence. 
+  This historic event marked the end of centuries of conflict and the beginning of a new era of collaboration.</p>
+
+  <p>Charter and Principles: The Federation operates under the principles outlined in the Articles of the Federation, 
+  a guiding document emphasizing equality, diplomacy, and non-aggression. The UFP is committed to fostering understanding 
+  between different species and maintaining the autonomy of member planets.</p>
       </section>
+
+      <section class="border-black">
+        <h1>Member Worlds</h1>
+
+<p>The UFP is a diverse union of planets, each contributing its unique strengths to the Federation. 
+  Notable member worlds include Earth, Vulcan, Andoria, Tellar, and Betazed, among many others. 
+  Cooperation and diplomacy are the cornerstones of our interstellar society.</p>
+      </section>
+
+      <section>
+        <h1>Starfleet</h1>
+
+<p>Exploration and Defense: Starfleet, the UFP's renowned space exploration and defense organization, 
+  plays a vital role in our mission. Committed to peaceful exploration, scientific discovery, and defense when necessary, 
+  Starfleet is comprised of individuals from various member worlds who work together for the common good.</p>
+
+  <p>Starships and Technology: Starfleet boasts an impressive fleet of starships equipped with advanced technology, 
+    allowing us to explore the farthest reaches of the galaxy. From the iconic USS Enterprise to cutting-edge starbases, 
+    our commitment to technological innovation ensures that we stay at the forefront of exploration and diplomacy.</p>
+      </section>
+
+      <section class="border-black">
+        <h1>Cultural Exchange</h1>
+<p>Diversity and Inclusivity: The Federation celebrates the rich tapestry of cultures within its borders. 
+  From annual interplanetary festivals to the exchange of artistic and scientific knowledge, the UFP actively promotes diversity and inclusivity, 
+  fostering understanding among its citizens.</p>
+
+  <p>Holodeck and Replicator Technology: Revolutionary advancements like holodeck technology and replicators enhance cultural exchange, 
+    allowing individuals to experience different worlds, historical periods, and cuisines within the safety of a controlled environment.</p>
+      </section>
+
+      <section>
+        <h1>Join the UFP</h1>
+<p>The United Federation of Planets welcomes new member worlds that share our commitment to peace, 
+  exploration, and cooperation. If your planet is interested in joining this extraordinary alliance, 
+  please contact our diplomatic representatives for more information.</p>
+      </section>
+
+      <section>
+        <h1>Contact Us</h1>
+<p>For inquiries, partnerships, or diplomatic matters, 
+  feel free to reach out to our headquarters on Earth or contact our ambassadorial offices on various member worlds.
+
+  Thank you for visiting the United Federation of Planets website. Together, let's explore the galaxy in unity and peace!</p>
+      </section>
+
+
     </main>
 
-    <footer class="main-footer">
-      <p>Kodeloftet 2024</p>
-    </footer>
+    <footer>
+      <div class="ufp-footer-container">
+          <div class="ufp-footer-logo">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/United_Federation_of_Planets_Flag.svg/1920px-United_Federation_of_Planets_Flag.svg.png" alt="United Federation of Planets Logo" width="300" height="200">
+          </div>
+          <div class="ufp-footer-info">
+              <h3>United Federation of Planets</h3>
+              <p>Exploring the Final Frontier, Together</p>
+          </div>
+          <div class="ufp-footer-social">
+              <p>Connect with us:</p>
+              <ul>
+                  <li><a href="https://twitter.com/UFPlanets" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Twitter_new_X_logo.png" alt="Twitter" width="40" height="40"></a></li>
+                  <li><a href="https://www.facebook.com/UnitedFederationOfPlanets" target="_blank"><img src="https://cdn-icons-png.flaticon.com/256/124/124010.png" alt="Facebook" width="40" height="40"></a></li>
+                  <li><a href="https://www.instagram.com/ufp_official" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/600px-Instagram_icon.png" alt="Instagram" width="40" height="40"></a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="ufp-footer-disclaimer">
+          <p>&copy; 2024 United Federation of Planets. All rights reserved.</p>
+      </div>
+  </footer>
   </body>
 </html>
