--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="main-navbar">
-      <a class="text-white" href="/">LogoPlaceholder</a>
+      <a class="text-white" href="/">UFP</a>
 
       <nav>
         <a class="text-white" href="/">Home</a>
